# zugamind

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  demo.py  pyproject.toml  runner.py
exp001-accept-A/: A-run0.jsonl  A-run1.jsonl  A-run2.jsonl  A-run3.jsonl  A-run4.jsonl  summary.json
exp001-out/: A-run0.jsonl  B-run0.jsonl  C-run0.jsonl  summary.json
exp001-pilot-clean/: A-run0.jsonl  B-run0.jsonl  C-run0.jsonl  summary.json
exp001-pilot-dense/: A-run0.jsonl  B-run0.jsonl  C-run0.jsonl  summary.json
exp001-tier1/: A-run0.jsonl  A-run1.jsonl  A-run2.jsonl  A-run3.jsonl  A-run4.jsonl  B-run0.jsonl  B-run1.jsonl  B-run2.jsonl  B-run3.jsonl  B-run4.jsonl  C-run0.jsonl  C-run1.jsonl  C-run2.jsonl  C-run3.jsonl  C-run4.jsonl  summary.json
exp001-tier1-pilot/: A-run0.jsonl  summary.json
exp003-tier1/: A-run0.jsonl  A-run1.jsonl  A-run2.jsonl  A-run3.jsonl  A-run4.jsonl  D-run0.jsonl  D-run1.jsonl  D-run2.jsonl  D-run3.jsonl  D-run4.jsonl  summary.json
exp003-tier1-invalid/: A-run0.jsonl  A-run1.jsonl  A-run2.jsonl  A-run3.jsonl  A-run4.jsonl  D-run0.jsonl  D-run1.jsonl  D-run2.jsonl  D-run3.jsonl  D-run4.jsonl  README.md  summary.json
exp003-tier1-postfix/: A-run0.jsonl  A-run1.jsonl  A-run2.jsonl  A-run3.jsonl  A-run4.jsonl  summary.json
exp004-out-invalid/: README.md  s12-A-run0.jsonl  s12-A-run1.jsonl  s12-A-run2.jsonl  s12-E-run2.jsonl  s2-A-run0.jsonl  s2-A-run1.jsonl  s2-A-run2.jsonl  s2-E-run1.jsonl  s2-E-run2.jsonl  s4-A-run0.jsonl  s4-A-run1.jsonl  s4-A-run2.jsonl  s4-E-run0.jsonl  s4-E-run1.jsonl  summary.json  (+7 more)
(+474 files in other folders)
