[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zugamind"
version = "0.1.0"
description = "A stdlib-only Global Workspace Theory (GWT) cognitive substrate for autonomous agents that routes deliberate work to Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Zuga Technologies" },
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["zugamind*"]
